# cudagrep

./: AUDIT_REPORT.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: legendary_bench.rs  mock_throughput.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_hardware_detection.rs
src/: alignment.rs  availability.rs  error.rs  lib.rs  main.rs  ops.rs  stats.rs
src/cufile/: error.rs  ffi.rs  mod.rs  ops.rs
src/hardware/: cache.rs  device.rs  dma.rs  mod.rs
tests/: break_it.rs  regression_suite.rs  sqlite_adversarial_suite.rs  structural_suite.rs  test_legendary_property.rs  test_legendary_unit.rs
tests/adversarial/: adversarial_gds.rs  alignment_boundary.rs  break_it.rs  buffer_alignment.rs  cache_eviction.rs  dma_safety.rs  fallback_behavior.rs  gpu_detection.rs  invalid_fd.rs  mod.rs  test_legendary_adversarial.rs
tests/concurrent/: dma_scaling.rs  mod.rs
tests/integration/: mod.rs
tests/property/: mod.rs
tests/regression/: graceful_degradation.rs  mod.rs
tests/structural/: availability_probe.rs  error_mapping.rs  hardware_fallback.rs  mod.rs  session_lifecycle.rs
tests/unit/: legendary.rs  mod.rs  regression_suite.rs  structural_suite.rs  test_legendary_gap.rs
